appId: com.toughra.ustadmobile
---
# this test add an assignment block on a course with deadline and grace period
# Test parameters needs to provide for this test :
# 1) TESTCOURSENAME: provide course name of string type
# 2) ASSIGNMENTNAME: provide assignment name of string type
- tapOn: "Courses"
- tapOn: ${TESTCOURSENAME}
- tapOn: "Edit"
- repeat:
    while:
      notVisible: "Add block"
    commands:
      - scroll
- tapOn: "Add block"
- tapOn: "Assignments"
- tapOn: "Title"
- inputText: ${ASSIGNMENTNAME}
- tapOn: "Description (Optional)"
- inputText: "Test "
- hideKeyboard
- tapOn: "Completion criteria"
- tapOn: "Submitted"
- tapOn: "Deadline (Optional)"
- tapOn: "OK"
- tapOn:
      text: "Time"
      index: 1
- tapOn: "OK"
- scroll
- tapOn: "End of grace period"
- tapOn: "OK"
- tapOn:
    text: "Time"
    index: 2
- tapOn: "Switch to text input mode for the time input."
- tapOn:
    id: "android:id/input_hour"
- runScript: settime_hr.js
- inputText: ${output.settime_hr.result}
- tapOn:
    id: "android:id/input_minute"
- runScript: settime_min.js
- inputText: ${output.settime_min.result}
- tapOn: "OK"
- tapOn:
    id: "com.toughra.ustadmobile:id/ca_edit_penalty"
- eraseText
- inputText: "10"
- tapOn: "DONE"
- tapOn: "SAVE"