appId: com.toughra.ustadmobile
---
# this test add an assignment block on a course
# Test parameters needs to provide for this test :
# 1) TESTCOURSENAME: provide course name of string type
# 2) ASSIGNMENTNAME: provide assignment name of string type

- tapOn: "Courses"
- tapOn: ${TESTCOURSENAME}
- tapOn: "Edit"
- repeat:
      while:
        notVisible: "Add block"
      commands:
         - scroll
- tapOn: "Add block"
- tapOn: "Assignments"
- tapOn: "Title"
- inputText: ${ASSIGNMENTNAME}
- tapOn: "Description (Optional)"
- inputText: "Test "
- hideKeyboard
- tapOn: "Completion criteria"
- tapOn: "Submitted"
- tapOn: "DONE"
- tapOn: "SAVE"