appId: com.toughra.ustadmobile
---
# this test add an assignment grade on a course with group of 2
# Test parameters needs to provide for this test :
# 1) TESTCOURSENAME: provide course name of string type
# 2) STUDENTNAME: provide student full name of string type
# 3) POINT1: provide mark in string type for Group 1
# 4) POINT2: provide mark in string type for group 2
# 5) TESTRESULTSDIR : provide location to store results
# 6) ASSIGNMENTNAME: provide assignment name of string type

- tapOn: "Courses"
- tapOn: ${TESTCOURSENAME}
- tapOn: ${ASSIGNMENTNAME}
- tapOn: "SUBMISSIONS"
- tapOn: "Group  1"
- swipe:
    direction: UP
- repeat:
    while:
      notVisible: "Points"
    commands:
      - scroll
- tapOn: "Points"
- inputText: ${POINT1}
- hideKeyboard
- tapOn:
    id: "com.google.android.inputmethod.latin:id/icon"
    index: 2
- tapOn: "SUBMIT GRADE"
- tapOn: "UPDATE GRADE AND MARK NEXT"
- swipe:
    direction: UP
- repeat:
    while:
      notVisible: "Points"
    commands:
      - scroll
- tapOn: "Points"
- inputText: ${POINT2}
- hideKeyboard
- tapOn:
    id: "com.google.android.inputmethod.latin:id/icon"
    index: 2
- tapOn: "SUBMIT GRADE"
- extendedWaitUntil:
      notVisible: "SUBMIT GRADE"
      timeout: 10000
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/added_assignment_grade_teacherView"