appId: com.toughra.ustadmobile
---
# this test add an assignment block on a course with group of 2
# Test parameters needs to provide for this test :
# 1) TESTCOURSENAME: provide course name of string type
# 2) ASSIGNMENTNAME: provide assignment name of string type
# 3) GROUPTITLE: provide group title of string type
- tapOn: "Courses"
- tapOn: ${TESTCOURSENAME}
- tapOn: "Edit"
- repeat:
    while:
      notVisible: "Add block"
    commands:
      - scroll
- tapOn: "Add block"
- tapOn: "Assignments"
- tapOn: "Title"
- inputText: ${ASSIGNMENTNAME}
- tapOn: "Description (Optional)"
- inputText: "Test "
- hideKeyboard
- tapOn: "Completion criteria"
- tapOn: "Submitted"
- repeat:
    while:
      notVisible: "Individual Submission"
    commands:
      - scroll
- tapOn: "Individual Submission"
- tapOn: "New group set"
- tapOn: "Title"
- inputText: ${GROUPTITLE}
- tapOn:
      id: "com.toughra.ustadmobile:id/fragment_course_group_set_number_groups_text"
- eraseText
- inputText: "2"
- hideKeyboard
- scroll
- tapOn:
      text: "Group"
      index: 0
- tapOn:
      id: "com.toughra.ustadmobile:id/line_item"
      index: 0
- tapOn:
    text: "Show dropdown menu"
    index: 1
- tapOn:
      id: "com.toughra.ustadmobile:id/line_item"
      index: 0
- tapOn:
    text: "Show dropdown menu"
    index: 2
- tapOn:
      id: "com.toughra.ustadmobile:id/line_item"
      index: 1
- tapOn:
    text: "Show dropdown menu"
    index: 3
- tapOn:
      id: "com.toughra.ustadmobile:id/line_item"
      index: 1
- tapOn: "SAVE"
- repeat:
    while:
      notVisible: "Teacher"
    commands:
      - scroll
- tapOn: "Teacher"
- tapOn: "Peers"
- tapOn:
    id: "com.toughra.ustadmobile:id/ca_edit_reviewers_number"
- eraseText
- inputText: 1
- tapOn:
    id: "com.toughra.ustadmobile:id/ca_edit_reviewers_number"
- eraseText
- tapOn: "ASSIGN REVIEWERS"
#---gp1
- tapOn:
    text: "Show dropdown menu"
    index: 0
- tapOn:
    text: "Group  2"
    index: 0
#---gp2
- tapOn:
    text: "Show dropdown menu"
    index: 1
- tapOn:
    text: "Group  1"
    index: 1
- tapOn: "DONE"
- tapOn: "DONE"
- tapOn: "SAVE"
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- tapOn: "Groups"
- tapOn:
    id: "com.toughra.ustadmobile:id/line1_text"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/group_list"