appId: com.toughra.ustadmobile
---
# this test flow add an assignment block on a course with grace period and penalty
# Test parameters needs to provide for this test :
# 1) TESTCOURSENAME: provide course name of string type
# 2) ASSIGNMENTNAME: provide assignment name of string type
- tapOn: "Courses"
- tapOn: ${TESTCOURSENAME}
- tapOn: "Edit"
- repeat:
    while:
      notVisible: "Add block"
    commands:
      - scroll
- tapOn: "Add block"
- tapOn: "Assignments"
- tapOn: "Title"
- inputText: ${ASSIGNMENTNAME}
- tapOn: "Description (Optional)"
- inputText: "Test "
- hideKeyboard
- tapOn: "Completion criteria"
- tapOn: "Submitted"
- tapOn: "Deadline (Optional)"
- tapOn: "OK"
- tapOn:
    text: "Time"
    index: 1
- tapOn: "OK"
- scroll
- tapOn: "End of grace period"
- tapOn: "OK"
- tapOn:
    text: "Time"
- tapOn: "Switch to text input mode for the time input."
- tapOn:
    id: "android:id/input_hour"
- inputText: "11"
- tapOn:
    id: "android:id/input_minute"
- inputText: "30"
- tapOn:
    id: "android:id/am_pm_spinner"
- tapOn: "PM"
- tapOn: "OK"
- tapOn:
    id: "com.toughra.ustadmobile:id/ca_edit_penalty"
- eraseText
- inputText: "10"
- tapOn: "DONE"
- tapOn: "SAVE"