appId: com.toughra.ustadmobile
---
# this test add a new course to the courses page
# test data required :
     # 1) TESTCOURSENAME: provide course name of string type
     # 2) TESTRESULTSDIR : ${TESTRESULTSDIR} : provides the path to store test results
- tapOn: "COURSES"
- tapOn:
    id: "floating_action_button"
- tapOn: "Add a new course"
- tapOn: "Name*"
- inputText: ${TESTCOURSENAME}
- hideKeyboard
- tapOn: "Description"
- tapOn:
      id: com.toughra.ustadmobile:id/editor
- inputText: "Test edit"
- hideKeyboard
- tapOn: "Done"
- tapOn: "SAVE"




