appId: com.toughra.ustadmobile
---
# Test parameters needs to provide for this test :
# 1) TESTCOURSENAME: provide course name of string type
# 2) ASSIGNMENTNAME: provide assignment name of string type
- tapOn: "Courses"
- tapOn: ${TESTCOURSENAME}
- tapOn: "Edit"
- repeat:
    while:
      notVisible: "Add block"
    commands:
      - scroll
- tapOn: "Add block"
- tapOn: "Assignments"
- tapOn: "Title"
- inputText: ${ASSIGNMENTNAME}
- tapOn: "Description (Optional)"
- inputText: "Test "
- hideKeyboard
- tapOn: "Completion criteria"
- tapOn: "Submitted"
- repeat:
      while:
          notVisible: "Must submit all at once"
      commands:
          - scroll
- tapOn: "Must submit all at once"
- tapOn: "Can make multiple submissions"
- tapOn: "DONE"
- tapOn: "SAVE"