appId: com.toughra.ustadmobile
---
# Test parameters needs to provide for this test :
# 1) TESTCOURSENAME: provide course name of string type
# 2) PRIVATECOMMENT: provide private comment that need to add of string type
# 3) ASSIGNMENTNAME: provide assignment name of string type
# 4) TESTRESULTSDIR: provide test results path

- tapOn: "Courses"
- tapOn: ${TESTCOURSENAME}
- tapOn: ${ASSIGNMENTNAME}
- swipe:
    direction: UP
- repeat:
      while:
          notVisible: "Add a private comment"
      commands:
              - scroll
- tapOn: "Add a private comment"
- inputText: ${PRIVATECOMMENT}
- tapOn:
      id: "com.toughra.ustadmobile:id/item_comment_new_send_ib"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/added_private_comment-${PRIVATECOMMENT}"