appId: com.ustadmobile.ustadapiconsumer
---
- launchApp
- tapOn: "Request Token"
- extendedWaitUntil:
    visible:
      text: "Ustad Mobile"
    timeout: 200000
- tapOn:
    text: "Ustad Mobile"
    index: 0
- tapOn: "Always"
- runFlow: "select_site.yaml"
- runFlow:
      file: "user_login.yaml"
- tapOn: "ACCEPT"
