appId: com.ustadmobile.ustadapiconsumer
---
- launchApp
- tapOn: "Request Token"
- extendedWaitUntil:
      visible:
       text: "Ustad Mobile"
      timeout: 200000
- tapOn:
    text: "Ustad Mobile"
    index: 0
- tapOn: "Always"
- tapOn: "Admin User"
- tapOn: "ACCEPT"
