appId: com.toughra.ustadmobile
---
# this test clear app data and start app
- clearState: com.toughra.ustadmobile
- launchApp
- tapOn: "Existing user"
- tapOn: "Learning Space"
- tapOn: "Enter link manually"
