appId: com.google.android.documentsui

---

# This flow copy an image file from downloads to pictures folder

- launchApp
- longPressOn: ${TESTFILENAME}
- tapOn: "More options"
- tapOn: "Copy to…"
- tapOn: "Show roots"
- tapOn:
    id: "android:id/title"
    index: 1
- tapOn: "Pictures"
- tapOn: "COPY"