appId: com.toughra.ustadmobile
---
# This test hides the content added in library page

 # Test parameters needs to provide for this test :
 # 1) TESTCONTENTNAME : provide the content title, it should be a string
 # 2) TESTRESULTSDIR : ${TESTRESULTSDIR} : provides the path to store test results

- back
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/screen_before_hiding_content"
- longPressOn:
    text: "${TESTCONTENTNAME}"
- tapOn:
    text: "Hide"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/screen_after_hiding_content"
# login to make sure the content is hidden
#clear state and launch app
- runFlow: "../common/clear_state_and_get_started.yaml"
- runFlow: "../common/select_site.yaml"
#admin login
- runFlow:
      file: "../common/user_login.yaml"
- tapOn: "Library"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/screen_after_hiding_content_test"