appId: com.toughra.ustadmobile
---
# This test moves the content to a new folder in library page

 # Test parameters needs to provide for this test :
  # 1) TESTRESULTSDIR : ${TESTRESULTSDIR} : provides the path to store test results
  # 2) TESTCONTENTNAME : provide the content title, it should be a string
- back
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/before_moving_content_to_new_folder"
- longPressOn:
    text: "${TESTCONTENTNAME}"
- tapOn:
    text: "Move"
- tapOn: "Add new content"
- tapOn: "New folder"
- tapOn: "Title"
- inputText: "New Test Folder"
- tapOn: "SAVE"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/after_moving_content_to_new_folder"
# login to make sure the content is hidden
#clear state and launch app
- runFlow: "../common/clear_state_and_get_started.yaml"
- runFlow: "../common/select_site.yaml"
#admin login
- runFlow:
      file: "../common/user_login.yaml"
- tapOn: "Library"
- tapOn: "New Test Folder"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/after_moving_content_to_new_folder_test"