appId: com.google.android.documentsui

---

##   Creating a separate flow file to open and view the image in the Pictures folder
- launchApp
- tapOn: "Show roots"
- tapOn: "Images"
- tapOn: "Pictures"
- tapOn: ${TESTFILENAME}
