appId: com.toughra.ustadmobile

---
- tapOn: "Pdf_Content.pdf"
- assertVisible: "The Power of Your\r

    Subconscious Mind\r

    By\r

    Dr Joseph Murphy\r

    Mobile Version\r

    Kindle Version\r

    More Free Books Law of Attraction Haven\r\n"

- tapOn: "Add file"
- runFlow:
    when:
      notVisible: "Downloads"
    file: redirect_to_downloads.yaml
- tapOn: ${TESTFILENAME}